Removes topbar-fixed on mobile

--- a/src/_topbars.scss
+++ b/src/_topbars.scss
@@ -147,10 +147,13 @@
 	========================================================================== */
 
 .topbar.topbar-fixed {
-	position: fixed;
 	top: 0;
 	left: 0;
     z-index: 9999;
+
+    @media (min-width: 960px) {
+		position: fixed;
+	}
 }
 
 /* Topbar Large
